--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
         <button class="icon" id="icon">
             <div class="line line1"></div>
             <div class="line line2"></div>
-            <i class='bx bxs-mouse click-me'></i>
+            <i class='bx bxs-mouse'></i>
         </button>
     </nav>
+    <section class="project_info" id="project-info">
+        <div class="project_info_card">
+            <img src="ReadMe-Images/Web-Effect-Project-banner3.png" class="project_info_img" />
+            <h2>Project Name</h2>
+            <p>Animated Navigation Bar</p>
+            <h2>Project Key Concepts</h2>
+            <p>button manipulation, transitions</p>
+            <i class='bx bx-x close' style='color:#000000' id="project-close"></i>
+    </section>
 
     <script src="./script.js"></script>
 </body>
